gcc/testsuite/rust/rustc/ui/rfc-2093-infer-outlives/reference.rs
#![feature(rustc_attrs)]

#[rustc_outlives]
struct Foo<'a, T> { // { dg-error "" "" { target *-*-* } }
    bar: &'a T,
}

fn main() {}

